Fixed sidebar covering content.

--- a/Undergraduate/What Can I Do With My Major/applied-animal-biology.css
+++ b/Undergraduate/What Can I Do With My Major/applied-animal-biology.css
@@ -7,12 +7,18 @@
   content:' \1F869';
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .page-title {
     	padding-left: 10px;
   }
   .group-left {
     	padding-left: 10px;
+  }
+  #nav-fixed {
+      padding: 1rem 1.4rem;
+  }
+  #nav-fixed > h4 {
+      margin-top: 0px;
   }
 }
 
